# SKLS_core

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
skls_core/: __init__.py
skls_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skls_core/logging/: __init__.py
skls_embeddings/: __init__.py  chroma_client.py  embedding_client.py  logger_config.py
skls_generator/: __init__.py  generator.py  logger_config.py  utils.py
skls_generator/gen_backends/: google_gen.py  llamacpp_gen.py
skls_neo4j/: __init__.py  neo4j_manager.py  schemas.py
